modified the ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,3 @@
-	HelloQt/HelloQt.pro.user
-	QtDebugTemp/
-	class/build-class-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	class/class/class.pro.user
-	helloword/bin/
-	helloword/helloword.cbp
-	helloword/helloword.depend
-	helloword/helloword.layout
-	helloword/obj/
-	lesson2/build-lesson2-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson2/lesson2/lesson2.pro.user
-	lesson3/build-structure-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson3/structure/structure.pro.user
-	lesson4/build-lesson4-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson4/lesson4/lesson4.pro.user
-	lesson5/build-lesson5-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson5/lesson5/lesson5.pro.user
-	lesson6/build-lesson6-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson6/lesson6/lesson6.pro.user
-	lesson7/build-lesson7-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson7/lesson7/lesson7.pro.user
-	lesson8/build-lesson8-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	lesson8/lesson8/lesson8.pro.user
-	strtype1/build-strType1-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	strtype1/strType1/strType1.pro.user
-	structType/build-structType-Desktop_Qt_5_7_0_GCC_64bit-Debug/
-	structType/structType/structType.pro.user
+	*.pro.user
+	*-Debug
 
